# Coleccion-Programacion-Estrucuturada

./: CMakeLists.txt  README.md  main.c  main.h
estudiante/: estudiante.c  estudiante.h
funciones/: funciones.c  funciones.h
uniones/: uniones.c  uniones.h
